remove umd template (browserify handles this from the box) prevent select label text add derequire. Then the bundle can be included inside other browserify build

--- a/.npmignore
+++ b/.npmignore
@@ -3,10 +3,11 @@ dist/files
 dist/index.html
 
 test/
-dev/
+dev/*
 !dev/multirangeslider.less
 
-.travis
+dev.md
+.travis.yml
 .idea
 umd-template.js
 gulpfile.js
