--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multirangeslider",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "",
   "main": "dist/multirangeslider.js",
   "repository": {
@@ -25,11 +25,11 @@
     "glob": "5.0.3",
     "gulp": "3.9.0",
     "gulp-babel": "5.2.1",
+    "gulp-derequire": "^2.1.0",
     "gulp-less": "3.0.5",
     "gulp-livereload": "3.8.1",
     "gulp-rename": "1.2.0",
     "gulp-uglify": "1.0.2",
-    "gulp-wrap": "0.11.0",
     "node-qunit-phantomjs": "^1.3.1",
     "qunitjs": "^1.22.0",
     "simulant": "^0.2.0",
