--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-livereload": "3.8.1",
     "gulp-rename": "1.2.0",
     "gulp-uglify": "1.0.2",
+    "gulp-util": "^3.0.7",
     "node-qunit-phantomjs": "^1.3.1",
     "qunitjs": "^1.22.0",
     "simulant": "^0.2.0",
