--- a/package.json
+++ b/package.json
@@ -19,20 +19,22 @@
   },
   "homepage": "https://github.com/paveltyavin/multirangeslider",
   "devDependencies": {
-    "babel-polyfill": "^6.7.2",
+    "babel-polyfill": "6.7.2",
     "babelify": "6.0.2",
     "browserify": "9.0.8",
+    "eslint": "2.9.0",
     "glob": "5.0.3",
     "gulp": "3.9.0",
     "gulp-babel": "5.2.1",
-    "gulp-derequire": "^2.1.0",
+    "gulp-derequire": "2.1.0",
     "gulp-less": "3.0.5",
     "gulp-livereload": "3.8.1",
     "gulp-rename": "1.2.0",
     "gulp-uglify": "1.0.2",
-    "node-qunit-phantomjs": "^1.3.1",
-    "qunitjs": "^1.22.0",
-    "simulant": "^0.2.0",
+    "gulp-util": "3.0.7",
+    "node-qunit-phantomjs": "1.3.1",
+    "qunitjs": "1.22.0",
+    "simulant": "0.2.0",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.7.0"
