--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multirangeslider",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "",
   "main": "dist/multirangeslider.js",
   "repository": {
@@ -8,6 +8,7 @@
     "url": "https://github.com/paveltyavin/multirangeslider"
   },
   "scripts": {
+    "build": "gulp build",
     "test": "node ./node_modules/node-qunit-phantomjs/bin/node-qunit-phantomjs test/index.html --verbose",
     "deploy": "git subtree push --prefix dist origin gh-pages"
   },
