--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multirangeslider",
-  "version": "0.5.2",
+  "version": "0.6.0",
   "description": "",
   "main": "dist/multirangeslider.js",
   "repository": {
@@ -20,24 +20,24 @@
   },
   "homepage": "https://github.com/paveltyavin/multirangeslider",
   "devDependencies": {
-    "babel-polyfill": "6.7.2",
-    "babelify": "6.0.2",
-    "browserify": "9.0.8",
-    "eslint": "2.9.0",
-    "glob": "5.0.3",
-    "gulp": "3.9.0",
-    "gulp-babel": "5.2.1",
-    "gulp-derequire": "2.1.0",
-    "gulp-less": "3.0.5",
-    "gulp-livereload": "3.8.1",
-    "gulp-rename": "1.2.0",
-    "gulp-uglify": "1.0.2",
-    "gulp-util": "3.0.7",
-    "node-qunit-phantomjs": "1.3.1",
-    "qunitjs": "1.22.0",
-    "simulant": "0.2.0",
-    "vinyl-buffer": "1.0.0",
-    "vinyl-source-stream": "1.1.0",
-    "watchify": "3.7.0"
+    "babel-polyfill": "^6.26.0",
+    "babelify": "^6.4.0",
+    "browserify": "^9.0.8",
+    "eslint": "^2.13.1",
+    "glob": "^5.0.15",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^5.3.0",
+    "gulp-derequire": "^2.1.0",
+    "gulp-less": "^3.5.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.4",
+    "gulp-util": "^3.0.8",
+    "node-qunit-phantomjs": "^1.6.3",
+    "qunitjs": "^1.23.1",
+    "simulant": "^0.2.2",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^1.1.2",
+    "watchify": "^3.11.0"
   }
 }
